# draft

./: .gitignore  ARCHITECTURE.md  CHANGELOG.md  LICENSE  README.md  index.html  justfile  package-lock.json  package.json  pyproject.toml  vite.config.ts
docs/: ARCHITECTURE.md  (+6 more)
src-tauri/: Cargo.toml  Info.plist  build.rs  tauri.conf.json
src-tauri/capabilities/: main.json
src-tauri/icons/: icon.icns
src-tauri/src/: critical_paths_tests.rs  desktop_menu.rs  diagnostics.rs  docx_trace.rs  lib.rs  main.rs  system_browser.rs
src-tauri/src/analysis/: ai.rs  ai_tests.rs  context.rs  context_tests.rs  mod.rs
src-tauri/src/application/: job_store.rs  mod.rs  network_client.rs  open_requests.rs  reference_store.rs  runtime_status.rs  secret_store.rs
src-tauri/src/citations/: bibliography.rs  bibliography_tests.rs  mod.rs  node.rs  node_tests.rs  resolution.rs  resolution_tests.rs
src-tauri/src/commands/: application_open.rs  citation_resolution.rs  connectivity.rs  diagnostic_snapshot.rs  document_close.rs  document_create.rs  document_open.rs  document_save.rs  docx_export.rs  external_access.rs  external_document_save.rs  formatting_review.rs  mod.rs  native_menu.rs  reference_library.rs  runtime_status.rs  text_analysis.rs  window_title.rs  worker_cancellation.rs
src-tauri/src/documents/: atomic_write.rs  dialog.rs  envelope.rs  external_save.rs  external_save_tests.rs  migration.rs  mod.rs  paragraph_format.rs  persistence.rs  registry.rs  save_as.rs  test_support.rs  text_format.rs  text_import.rs
src-tauri/src/events/: ai_stream.rs  application_open.rs  mod.rs  native_menu.rs  runtime_status.rs
src-tauri/src/exports/: docx.rs  docx_model.rs  docx_package.rs  docx_tests.rs  mod.rs  plain_text.rs
src-tauri/src/formatting/: checks.rs  checks_tests.rs  mod.rs  review.rs  review_tests.rs
src-tauri/src/imports/: pdf.rs  pdf_tests.rs
src-tauri/src/interoperability/: fidelity.rs  mod.rs  provenance.rs
src-tauri/src/interoperability/docx_import/: document.rs  footnotes.rs  mod.rs  package.rs  readable.rs  table.rs  tests.rs
src-tauri/src/jobs/: mod.rs  pdf_import.rs  store.rs  store_tests.rs
src-tauri/src/network/: client.rs  client_tests.rs  connectivity.rs  mod.rs
src-tauri/src/references/: mod.rs  record.rs  store.rs  store_tests.rs  test_support.rs
src-tauri/src/research/: external_access.rs  external_access_tests.rs  metadata.rs  metadata_tests.rs  mod.rs
src-tauri/src/secrets/: mod.rs  store.rs
src-tauri/src/workers/: cancellation.rs  mod.rs
(+235 files in other folders)
