[package]
name = "draft"
version = "0.1.0"
description = "Document Research, Analysis, Formatting & Text-analysis"
authors = ["Progentic"]
edition = "2024"
rust-version = "1.96"

[lib]
name = "draft_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.6.3", features = [] }

[dependencies]
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
tauri = { version = "2.11.5", features = [] }
tokio-util = { version = "0.7.18", features = ["rt"] }
uuid = { version = "1.23.4", features = ["serde", "v4"] }
