[package]
name = "draft"
version = "0.1.0"
description = "Document Research, Analysis, Formatting & Text-analysis"
authors = ["Progentic"]
edition = "2024"
rust-version = "1.96"

[lib]
name = "draft_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.6.3", features = [] }

[dependencies]
quick-xml = "0.41.0"
reqwest = { version = "0.13.4", default-features = false, features = ["rustls"] }
rusqlite = { version = "0.40.1", features = ["bundled"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
sha2 = "0.10.9"
tauri = { version = "2.11.5", features = [] }
tauri-plugin-dialog = "2.7.1"
tauri-plugin-opener = "2.5.4"
tempfile = "3.27.0"
tokio = { version = "1.52.3", features = ["io-util", "macros", "process", "time"] }
tokio-util = { version = "0.7.18", features = ["rt"] }
url = "2.5.8"
uuid = { version = "1.23.4", features = ["serde", "v4"] }
zip = { version = "8.6.0", default-features = false }
